--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -32,15 +32,13 @@
         <dependency>
     <groupId>org.openjfx</groupId>
     <artifactId>javafx-fxml</artifactId>
-    <version>11</version>
+    <version>19</version>
     <type>pom</type>
     </dependency>
 
   </dependencies>
 
   <build>
-      <sourceDirectory>src/main/java</sourceDirectory>
-      <testSourceDirectory>test/main/java</testSourceDirectory> 
 
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
@@ -88,7 +86,7 @@
     <artifactId>javafx-maven-plugin</artifactId>
     <version>0.0.8</version>
     <configuration>
-        <mainClass>MainGame</mainClass>
+        <mainClass>Window</mainClass>
     </configuration> 
 </plugin>
 
