--- a/.gitignore
+++ b/.gitignore
@@ -191,7 +191,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-Scores/score.txt
+Scores/score.json
 target
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+iml,visualstudiocode,java,macos,windows
